MDEV-16357 LIMIT and ORDER BY clause is ignored on a query with UNION            when using brackets

Do not create master unit for select if it has already one.